--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 body {
     font-family: Arial, sans-serif;
     background: white;
@@ -22,7 +21,9 @@ canvas {
 }
 .info {
     margin: 10px;
-    font-size: 18px;
+    font-size: 12px;
+    width: 60px;
+    height: 30px;
 }
 table {
     margin: 10px auto;
@@ -35,19 +36,53 @@ td, th {
 .controls {
     display: flex;
     justify-content: center;
-    gap: 10px;
+    gap: 40px;
     margin-top: 20px;
 }
-.control-btn {
-    padding: 15px 20px;
-    font-size: 18px;
-    background: #f0f0f0;
-    border: 2px solid black;
-    border-radius: 10px;
+.control__block{
+    display: flex;
+    justify-content: center;
+    gap: 100px;
+}
+.control__btn-start{
+    width: 35px;
+    height: 35px;
+    font-size: 6px;
+    background: orange;
+    border-radius: 50%;
     cursor: pointer;
     user-select: none;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.control-btn {
+    width: 50px;
+    height: 50px;
+    font-size: 18px;
+    background: orange;
+    border-radius: 50%;
+    cursor: pointer;
+    user-select: none;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .display{
     display: flex;
     justify-content: center;
+}
+#game-state {
+    font-weight: bold;
+    color: #333;
+}
+
+.next-piece-container {
+    margin-top: 20px;
+}
+#next-piece {
+    margin-top: 5px;
+    border: 0 solid #ccc;
 }
